# leo_simulator

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: controllers.yaml  pid_gains.yaml
launch/: leo_gazebo.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch
leo_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_gazebo/config/: controllers.yaml
leo_gazebo/launch/: leo_gazebo.launch  leo_gazebo.launch.py  leo_marsyard.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch  spawn_robot.launch.py
leo_gazebo/launch/worlds/: leo_marsyard2020_world.launch  leo_marsyard2021_world.launch  leo_marsyard2022_world.launch
leo_gazebo/scripts/: odom_relay
leo_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_gazebo_plugins/src/: differential_plugin.cpp
leo_gazebo_worlds/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_gazebo_worlds/media/materials/scripts/: marsyard.material
leo_gazebo_worlds/models/marsyard2020_terrain/: model.config  model.sdf
leo_gazebo_worlds/models/marsyard2021_terrain/: model.config  model.sdf
leo_gazebo_worlds/models/marsyard2021_terrain/dem/: marsyard_terrain_hm.tif
leo_gazebo_worlds/models/marsyard2021_terrain/meshes/: lava.mtl  rocks_big.mtl  rocks_medium.mtl
leo_gazebo_worlds/models/marsyard2022_terrain/: model.config  model.sdf
leo_gazebo_worlds/worlds/: marsyard2020.world  marsyard2021.world  marsyard2022.world
leo_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
models/marsyard_terrain/: model.config  model.sdf
models/marsyard_terrain/meshes/: terrain_compressed.mtl
worlds/: marsyard.world
