<?xml version="1.0"?>
<package format="2">
  <name>leo_gazebo</name>
  <version>0.1.1</version>
  <description>The leo_gazebo package</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>leo_description</exec_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
 
</package>
