<?xml version="1.0"?>
<package format="2">
  <name>leo_gazebo</name>
  <version>0.1.2</version>
  <description>
    Launch files and other resources for simulating Leo Rover in Gazebo.
  </description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
  <author email="blazej@turtlerover.com">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_gazebo</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_simulator/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>leo_description</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
 
</package>
