<?xml version="1.0"?>
<package format="3">
  <name>leo_gazebo</name>
  <version>0.2.0</version>
  <description>
    Launch files and other resources for simulating Leo Rover in Gazebo.
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_gazebo</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_gazebo/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_gazebo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>leo_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
