<?xml version="1.0"?>
<package format="3">
  <name>leo_gazebo_plugins</name>
  <version>0.2.0</version>
  <description>
    Gazebo plugins for Leo Rover.
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_gazebo</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_gazebo/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_gazebo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
