<?xml version="1.0"?>
<package format="2">
  <name>leo_gazebo_plugins</name>
  <version>1.1.0</version>
  <description>
    Gazebo Plugins for simulating Leo Rover.
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_gazebo_plugins</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_simulator/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>

</package>
