<?xml version="1.0"?>
<package format="2">
  <name>leo_simulator</name>
  <version>1.0.1</version>
  <description>
    Metapackage of software for simulating Leo Rover
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_simulator</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_simulator/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>leo_gazebo</exec_depend>
  <exec_depend>leo_gazebo_plugins</exec_depend>
  <exec_depend>leo_gazebo_worlds</exec_depend>

  <export>
    <metapackage />
  </export>
</package>